fix: removed bottom scrollbar

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 /* nav bar */
 nav{
     /* border: 1px solid red; */
-    width: 100vw;
+    width: 98vw;
     height: 80px;
     display: flex;
     justify-content: space-evenly;
@@ -44,6 +44,7 @@ nav{
     justify-content: start;
     align-items: center;
     border-radius: 5px;
+    border: none;
 }
 
 #search_icon{
@@ -53,12 +54,13 @@ nav{
 #search_area{
     width: 100%;
     height: 100%;
+    border: none;
 }
 #search_area>input{
     border-radius: 5px;
     width: 100% ;
     height: 100%;
-    border: 0px;
+    border: none;
     background-color: #f5f5f5;
 }
 
@@ -80,7 +82,7 @@ nav{
 
 /* 400 off */
 #offer_sticker{
-    width: 100vw;
+    width: 98vw;
     height: 130px;
     display: flex;
     align-items: center;
@@ -94,7 +96,7 @@ nav{
 /* big brands bash */ 
 
 #big_brands_bash{
-    width: 100vw;
+    width: 98vw;
     height: 399px;
     display: flex;
     justify-content: center;    
@@ -106,7 +108,7 @@ nav{
 
 /* coupons corner */
 #coupons_corner{
-    width: 100vw;
+    width: 98vw;
 }
 #coupons_corner>img{
     width: 100%;
@@ -114,7 +116,7 @@ nav{
 
 /* coupons corner image */
 #coupons_corner_image{
-    width: 100vw;
+    width: 98vw;
 }
 #coupons_corner_image>img{
     width: 100%;
@@ -123,7 +125,7 @@ nav{
 
 /* crazy deals */
 #crazy_deals{
-    width: 100vw;
+    width: 98vw;
 }
 #crazy_deals>img{
     width: 100%;
@@ -131,7 +133,7 @@ nav{
 
 /* corousal */
 #corousal{
-    width: 100vw;
+    width: 98vw;
     height: 335px;
     display: flex;
     overflow: auto;
@@ -143,7 +145,7 @@ nav{
 
 /* shop by category banner */
 #shop_by_category{
-    width: 100vw;
+    width: 98vw;
 }
 #shop_by_category>img{
     width: 100%;
@@ -151,7 +153,7 @@ nav{
 
 /* shop by category images */
 #shop_by_category_images{
-    width: 100vw;
+    width: 98vw;
     height: 1490px;
     display: flex;
     justify-content: space-evenly;
@@ -165,7 +167,7 @@ nav{
 
 /* remaining 3 category images */
 #remaining_cat_img{
-    width: 100vw;
+    width: 98vw;
     height: 300px;
     display: flex;
     justify-content: center;
@@ -185,7 +187,7 @@ nav{
 
 /* app install banner */
 #app_install_banner{
-    width: 100vw;
+    width: 98vw;
     height: 300px;
 }
 #app_install_banner>img{
@@ -198,7 +200,7 @@ nav{
 /* footer */
 footer{
     background-color: #fbfbfd;
-    width: 100vw;
+    width: 98vw;
     display: flex;
     justify-content: center;
 }
